[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.1", features = ["full"] }
bytes = { version = "1", features = ["serde"] }
dashmap = "5.4.0"


[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
incremental = false 
strip = true
opt-level = 'z'
